--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "test": "echo \"Error: no test specified\" && exit 1",
   "start": "node server.js",
   "dev": "nodemon server.js",
-  "build": "cd .. && npm install --no-audit --no-fund && npm run build"
+  "build": "cd .. && npm install --no-audit --no-fund --include=dev && npm run build"
   },
   "author": "",
   "license": "ISC",
