--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -1,28 +1,11 @@
-name: Trigger Render Deploys
+name: Disabled Render deploy helper
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch: {}
 
 jobs:
-  deploy:
+  noop:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger backend deploy (if configured)
-        if: ${{ secrets.BACKEND_SERVICE_ID != '' }}
-        run: |
-          echo "Triggering backend deploy..."
-          curl -sS -X POST "https://api.render.com/v1/services/${{ secrets.BACKEND_SERVICE_ID }}/deploys" \
-            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d '{"clearCache":false}'
-
-      - name: Trigger frontend deploy (if configured)
-        if: ${{ secrets.FRONTEND_SERVICE_ID != '' }}
-        run: |
-          echo "Triggering frontend deploy..."
-          curl -sS -X POST "https://api.render.com/v1/services/${{ secrets.FRONTEND_SERVICE_ID }}/deploys" \
-            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
-            -H "Content-Type: application/json" \
-            -d '{"clearCache":false}'
+      - name: No-op
+        run: echo "Render deploy workflow disabled. Re-enable or recreate a safe workflow when needed."
